tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Mutatron-AAAAAAAAAAAAAAAAAAAB_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 508,
  "prerequisites": [
    1493,
    506
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mutations can be boring, they can be annoying, and most times, they are frustrating. With this machine, you will get a 100 percent pure bred mutation. If the combination of princess and drone can result in multiple mutations, the outcome is random. But who cares?\n\n[note]You can now upgrade your leftover Bees Advanced bags to Bees Expert in the last quest tab.\n\nIf you missed grabbing an effect from a species, this is a way to get it again.\n\nYou'll need naquadah bees to make this, and the other Gendustry machines.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mutatron",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    506
  ],
  "rewards": [],
  "tasks": []
}
