tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__OnlytheBestCave-AAAAAAAAAAAAAAAAAAACEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 528,
  "prerequisites": [
    509
  ],
  "properties": {
    "auto_claim": false,
    "desc": "On your way to awesome bees, you have to collect only the best traits available. Bees with Cave can work in housing that is covered - by more housing!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Only the Best: Cave",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    509
  ],
  "rewards": [],
  "tasks": []
}
